--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <button type="button" class="btn btn-primary" [disabled]="!categoryForm.valid"
-            (click)="updateCategoryAsync()">Edit</button>
+            (click)="updateCategoryAsync()" data-bs-dismiss="modal">Edit</button>
         </form>
       </div>
       <div class="modal-footer">
