--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <input type="text" placeholder="name" id="regiterUser" />
       <input type="password" placeholder="password" id="registerPassword" />
       <input type="text" placeholder="email address" />
-      <button>create</button>
+      <button type="button">create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form [formGroup]="loginForm" class="login-form">
